// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon component should render component with default props: Icon component - name: outlined-default-mockup 1`] = `
<Text
  accessibilityRole="image"
  style={
    Object {
      "color": "#BBBBBB",
      "fontFamily": "natds-icons",
      "fontSize": 24,
    }
  }
  testID="icon-outlined-default-mockup"
>
  
</Text>
`;

exports[`Icon component should render component with given props: Icon component - name: outlined-finance-bank 1`] = `
<Text
  accessibilityRole="imagebutton"
  style={
    Object {
      "color": "#BBBBBB",
      "fontFamily": "natds-icons",
      "fontSize": 24,
    }
  }
  testID="icon-outlined-finance-bank"
>
  
</Text>
`;

exports[`Icon component should render correctly when icon is "filled-action-add": Icon component - name: filled-action-add 1`] = `
<Text
  accessibilityRole="image"
  style={
    Object {
      "color": "#BBBBBB",
      "fontFamily": "natds-icons",
      "fontSize": 24,
    }
  }
  testID="icon-filled-action-add"
>
  
</Text>
`;

exports[`Icon component should render correctly when icon is "outlined-action-micrec": Icon component - name: outlined-action-micrec 1`] = `
<Text
  accessibilityRole="image"
  style={
    Object {
      "color": "#BBBBBB",
      "fontFamily": "natds-icons",
      "fontSize": 24,
    }
  }
  testID="icon-outlined-action-micrec"
>
  
</Text>
`;

exports[`Icon component should render correctly when icon is "outlined-content-wellness": Icon component - name: outlined-content-wellness 1`] = `
<Text
  accessibilityRole="image"
  style={
    Object {
      "color": "#BBBBBB",
      "fontFamily": "natds-icons",
      "fontSize": 24,
    }
  }
  testID="icon-outlined-content-wellness"
>
  
</Text>
`;

exports[`Icon component should render correctly when icon is "outlined-finance-bank": Icon component - name: outlined-finance-bank 1`] = `
<Text
  accessibilityRole="image"
  style={
    Object {
      "color": "#BBBBBB",
      "fontFamily": "natds-icons",
      "fontSize": 24,
    }
  }
  testID="icon-outlined-finance-bank"
>
  
</Text>
`;
